bug with z-index in buttons

--- a/src/components/button/button_back.css
+++ b/src/components/button/button_back.css
@@ -11,6 +11,7 @@
     color: #FFFFFF;
     border: #f04e26 solid 1px;
     transform:rotate(180deg);
+    z-index: 2;
 }
 
 .button_back::before {
