--- a/src/components/button/button_new.css
+++ b/src/components/button/button_new.css
@@ -8,6 +8,7 @@
     padding: 10px;
     margin: 10px;
     transform: rotate(45deg);
+    z-index: 2;
 }
 
 .button_new::after {
