--- a/src/components/form/form_simple/_simple.css
+++ b/src/components/form/form_simple/_simple.css
@@ -17,7 +17,7 @@
 
 .form_simple-exit {
     transform: none;
-    opacity: 100%;
+    opacity: 1;
 }
 
 .form_simple-exit-active {
